# AskHuman

./: AGENTS.md  LICENSE  README.en.md  README.md  cliff.toml  index.html  install-windows.ps1  install.sh  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml  release.yml
demo/claude-activation/: .gitignore  FINDINGS.md
demo/claude-activation/.claude/: settings.json
demo/claude-activation/harness/: common.cjs  envprobe.cjs  hooklog.cjs  poller.cjs
docs/: PROGRESS.md  TODO.md  development.md  feishu-setup.md  overview-configuration.md  overview-im-commands.md  overview-popup-ui.md  overview.md
docs/assets/: dingtalk-ask-card-template-export.json  dingtalk-confirm-card-README.md  dingtalk-confirm-card-template.json  dingtalk-select-card-template.json  dingtalk-watch-card-template-export.json  dingtalk-watch-card-template.json
docs/investigations/: project-review-2026-07.md
docs/perf/: baseline.json
docs/plans/: agent-permission-approval.md  codex-mcp-blocking.md  daemon-architecture.md  daemon-graceful-drain.md  feishu-channel.md  im-agent-task-launch.md  im-channel-activation.md  im-diff-stage-transcript.md  im-msg-compose-card.md  im-msg-select-card.md  im-select-card.md  im-status-activity.md  im-status-realtime-hook.md  im-watch-channels.md  im-watch.md  mcp.md  menu-bar-tray.md  multi-question-interaction-redesign.md  perf-harness-deterministic-mock-im.md  permission-native-edit-diff.md  popup-focus-arbitration.md  popup-pinned-composer.md  popup-prewarm.md  recommended-option.md  release-and-channel-degradation.md  rust-tauri.md  secret-storage-keychain.md  slack-channel.md
docs/release-notes/: README.md
docs/specs/: agent-interject.md  agent-lifecycle-tracking.md  agent-stop-confirmation.md  cli-config.md  codex-permission-remember.md  daemon-architecture.md  daemon-graceful-drain.md  dev-instance-parallel.md  dingtalk-attachment-preview.md  feishu-channel.md  file-attachments.md  im-agent-task-launch.md  im-command-phrases.md  im-diff-stage-transcript.md  im-msg-compose-card.md  im-request-origin.md  im-select-card.md  im-watch.md  mcp.md  menu-bar-tray.md  multi-question-interaction-redesign.md  multi-question-vertical.md  permission-native-edit-diff.md  popup-launch-performance.md  popup-pinned-composer.md  popup-prewarm.md  question-overview.md  recommended-option.md  release-and-channel-degradation.md  reply-history.md  rust-tauri.md  secret-storage-keychain.md  self-update.md  slack-channel.md  todo-whats-next.md  watch-rewatch.md
docs/todos/: im-channel-activation.md
docs/wiki/: dingtalk-setup.en.md  dingtalk-setup.md  environment-variables.en.md  environment-variables.md  feishu-setup.en.md  feishu-setup.md  settings.en.md  settings.md  telegram-setup.en.md  telegram-setup.md
packaging/npm/humaninloop/: README.md  index.d.ts  index.js  package.json
scripts/: bump-version.mjs  gen_tray_attention_icons.sh  gen_tray_icons.py  install-git-hooks.sh  install-windows.ps1  install.sh  perf-mock-im.mjs  perf-popup.mjs
scripts/githooks/: pre-commit
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: autochannel.rs  commands.rs  config.rs  confirm.rs  dev_instance.rs  dev_presets.rs  gitutil.rs  i18n.rs  macos_menu.rs  macos_quicklook.rs  macos_window_anim.rs  macos_window_order.rs  main.rs  models.rs  msg_card.rs  paths.rs  perf.rs  permission_memory.rs  permission_rules.rs  permissions.rs  project.rs  prompts.rs  secrets.rs  select.rs  textnorm.rs  todos.rs  watch.rs
src-tauri/src/agents/: activity.rs  detect.rs  mod.rs  registry.rs  report.rs  stop.rs  title.rs  transcript_full.rs  workspaces.rs
src-tauri/src/app/: coordinator.rs  gui_host.rs  mod.rs
src-tauri/src/channels/: confirm.rs  conversation.rs  dingding.rs  feishu.rs  mod.rs  popup.rs  slack.rs  telegram.rs
src-tauri/src/cli/: agents_cmd.rs  args.rs  cfgio.rs  channel_cmd.rs  debug_cmd.rs  doctor.rs  help.rs  image_writer.rs  mod.rs  output.rs  todo_cmd.rs
src-tauri/src/client/: mod.rs
src-tauri/src/confirm/: choice_cards.rs
src-tauri/src/daemon/: lifecycle.rs  mod.rs  popup_focus.rs  request.rs  spawn.rs
src-tauri/src/daemon/unix_impl/: inbound.rs  mod.rs  select.rs  todo.rs  watch.rs
src-tauri/src/dingtalk/: card.rs  client.rs  confirm.rs  docx.rs  mod.rs  router.rs  select.rs  stream.rs  token.rs  watch.rs
src-tauri/src/export/: diff_docx.rs  diff_file.rs  diff_html.rs  diff_md.rs  mod.rs  transcript_docx.rs  transcript_html.rs  transcript_md.rs
src-tauri/src/feishu/: card.rs  client.rs  mod.rs  router.rs  ws.rs
src-tauri/src/gui_host/: mod.rs
src-tauri/src/integrations/: agent_launch.rs  agent_lifecycle.rs  agent_mode.rs  agent_rules.rs  claude_hook.rs  cursor_hook.rs  login_item.rs  mcp_config.rs  mod.rs  mutation_lock.rs  terminal_focus.rs
src-tauri/src/ipc/: codec.rs  mod.rs  transport.rs
src-tauri/src/mcp/: ask.rs  mod.rs
src-tauri/src/permission_diff/: adapters.rs  build.rs  mod.rs  model.rs  patch.rs  safety.rs  worker.rs
src-tauri/src/slack/: blockkit.rs  client.rs  confirm.rs  mod.rs  select.rs  watch.rs  ws.rs
src-tauri/src/telegram/: confirm.rs  markdown.rs  mod.rs  router.rs  select.rs  watch.rs
src-tauri/src/update/: direct.rs  mod.rs  npm.rs  state.rs
src/components/: HistoryDetail.test.ts  HistoryDetail.vue
src/i18n/: en.ts  index.ts  locale.ts  zh.ts
src/lib/: ipc.ts  perf.ts  shortcut.ts  terminals.ts  types.ts
src/styles/: controls.css  tokens.css
src/views/: AgentsView.vue  HistoryView.vue  PopupView.vue  SettingsView.vue  TodosView.vue
src/views/popup/: AnswerComposer.test.ts  AnswerComposer.vue  ComposerDock.vue  ConfirmPane.vue  PermissionDiffPane.test.ts  PermissionDiffPane.vue  PopupFooter.vue  QuestionCards.vue  SequentialPane.test.ts  SequentialPane.vue  TodoSection.vue  composerDock.test.ts  composerDock.ts  context.ts  optionDisplay.ts  permissionDiff.ts  popup.css  useAttachments.test.ts  useAttachments.ts  usePopupCore.ts  useSpeech.ts
src/views/settings/: ChannelsTab.vue  GeneralTab.vue  settings.css  useGeneralSettings.ts  useSearch.ts
