[package]
name = "humaninloop"
version = "0.3.0"
description = "HumanInLoop - Human-in-the-loop interaction tool (Rust + Tauri)"
authors = ["Naituw"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "AskHuman"

[[bin]]
name = "AskHuman"
path = "src/main.rs"

[features]
# 生产构建（直接 `cargo build --release`，不经 tauri CLI）必须启用此特性：
# 否则 tauri 的 build.rs 判定 dev=true，二进制会去连 devUrl(localhost) 而非内嵌资源，导致白屏。
# 注意：`pnpm tauri dev` 不启用此特性，仍走 dev server 热重载。请勿移除。
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
# 会话型渠道公共接口（Telegram/钉钉等共享多问题驱动逻辑）需要 async trait。
async-trait = "0.1"
dirs = "5"
base64 = "0.22"
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
# 从窗口向系统发起原生文件拖拽（-f 附件胶囊可拖到其它应用打开）。
tauri-plugin-drag = "2"
# macOS 26+ Liquid Glass 整窗背景（NSGlassEffectView）；旧系统自动回退到 NSVisualEffectView；
# 非 macOS 为安全空操作。
tauri-plugin-liquid-glass = "0.1"
# 检测系统深/浅色，用于 system 主题下给窗口设置正确底色（消除白闪）。
# Linux 端依赖（zbus）仅在 Linux 目标编译，不影响 macOS 编译速度。
dark-light = "2"
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
# 飞书长连接帧为 protobuf(pbbp2)。仅用 prost 运行时 + #[derive(prost::Message)] 自定义 PbFrame，
# 不引入 prost-build / protoc / build.rs（帧结构极小，自持更可控）。
prost = "0.13"
sys-locale = "0.3.2"
# Markdown 解析（文本附件转 docx）。禁用 html/simd 等默认特性以控体积。
pulldown-cmark = { version = "0.13.4", default-features = false }
# 打包 docx（OOXML zip）。仅启用 flate2+zlib-rs 的 deflate 后端（快且小，避免 zopfli）。
zip = { version = "4.2.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
tempfile = "3"

# Unix 下用于在进入 GUI 事件循环前静默系统噪音日志（重定向 stderr）。
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# macOS 原生 QuickLook 预览（QLPreviewPanel）经 objc2 调用；版本与 Tauri 现用一致。
# 需 NSResponder：预览控制者作为 NSResponder 子类插入弹窗响应链，方可经 QLPreviewPanelController
# 协议（acceptsPreviewPanelControl/begin/end）控制面板，从而触发 previewPanel:handleEvent: 回调。
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSURL", "NSGeometry", "NSData", "NSError", "NSLocale", "NSDictionary"] }
objc2-app-kit = { version = "0.3", features = ["NSResponder", "NSEvent", "NSApplication", "NSImage", "NSDockTile"] }
# 语音输入回调桥（block2 创建 @convention(block) 闭包供 Swift SpeechAnalyzer 回调）。
block2 = "0.6"

# 较快的 release 配置（不启用 LTO，避免原 Rust 版的慢链接）。
# 编译性能将在功能完成后专门评测（见 docs/plans/rust-tauri.md §21）。
[profile.release]
opt-level = "z"
codegen-units = 16
incremental = true
strip = true
panic = "abort"
